# fswatch

./: .gitignore  CMakeLists.txt
fswatch/: CMakeLists.txt
fswatch/src/: CMakeLists.txt  fswatch.cpp
libfswatch/: CMakeLists.txt
libfswatch/src/libfswatch/c++/: event.cpp  event.hpp  inotify_monitor.cpp  monitor.cpp  monitor.hpp  poll_monitor.cpp  poll_monitor.hpp
